--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "react-sidenav": "^3.1.9",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
